--- a/_posts/story/0000-01-01-first-met.md
+++ b/_posts/story/0000-01-01-first-met.md
@@ -3,3 +3,4 @@ title: First Met
 place: ACM Programming Competition Practice
 event-date: October 2012
 ---
+First met at ACM Programming Competition practice and exchanged numbers at the Programming Competition itself
