Nix the timeline, just do basic 'about' and important events

--- a/_posts/story/0000-01-01-first-met.md
+++ b/_posts/story/0000-01-01-first-met.md
@@ -1,6 +1,7 @@
 ---
 title: First Met
-place: ACM Programming Competition Practice
-event-date: October 2012
+place: Oklahoma Christian University
+event-date: October 1, 2012
+image: ../images/oc.jpg
 ---
-First met at ACM Programming Competition practice and exchanged numbers at the Programming Competition itself
+Tanya:
